tester/testsuite/bad/bad058.jl
double printInt() {
   return 1.0;
}
int main() {
   double x = printInt();
   return 1;
}
